--- a/Spectrogram_classification (based).ipynb
+++ b/Spectrogram_classification (based).ipynb
@@ -766,6 +766,7 @@
     "\n",
     "### - 프로젝트를 진행하면서 알아낸 점 혹은 아직 모호한 점.\n",
     "    skip-connection 모델로 수행했을 때 성능이 크게 다르지 않다는 점을 알게되었습니다.\n",
+    "    spectrogram에서 wav 파일로 완벽하게 복구하는 것은 힘들지만, melspectrogram에서 wav 파일로 변환하면 크게 데이터의 손실 없이 변환하는 것이 가능하다는 것을 알게되었습니다.\n",
     "\n",
     "\n",
     "### - 루브릭 평가 지표를 맞추기 위해 시도한 것들.\n",
@@ -789,6 +790,13 @@
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
