--- a/Spectrogram_classification (based).ipynb
+++ b/Spectrogram_classification (based).ipynb
@@ -14,6 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. 데이터 처리와 분류"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -209,6 +216,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. 학습을 위한 하이어파라미터 설정"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -263,6 +277,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. 데이터셋 구성"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -305,6 +326,13 @@
    "outputs": [],
    "source": [
     "del speech_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2차원 Spectrogram 데이터를 처리하는 모델 구성"
    ]
   },
   {
@@ -516,6 +544,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. 학습이 어떻게 진행됐는지 그래프로 출력"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -583,6 +618,13 @@
    "source": [
     "model_wav.load_weights(checkpoint_dir)\n",
     "print(\"✅\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Test dataset을 이용해서 모델의 성능을 평가"
    ]
   },
   {
